tests/negative/traits/invoke_addr_mutability.orng
// invoke_addr_mutability.orng:24:6: error: receiver `&mut self` of method `lmao` incompatible with type `&Int`
//     y.>lmao()
//     ^
// invoke_addr_mutability.orng:24:8: error: the type `&Int` does not contain the member `lmao`
//     y.>lmao()
//       ^
// invoke_addr_mutability.orng:16:7: note: candidate not viable: receiver mismatch
//     fn lmao(&mut self) -> () {
//      ^
// 
trait Lol {
    fn lmao(&mut self) -> ()
}

impl Lol for Int {
    fn lmao(&mut self) -> () {
        self^ = 30
    }
}

fn main() -> Int {
    let x = 5
    let y = &x
    y.>lmao()
    x
}